[package]
name = "gilrs-core"
version = "0.3.2"
authors = ["Mateusz Sieczko <arvamer@gmail.com>"]
license = "Apache-2.0/MIT"
description = "Minimal event based abstraction for working with gamepads"
documentation = "https://docs.rs/gilrs-core/"
repository = "https://gitlab.com/gilrs-project/gilrs"
readme = "README.md"
keywords = ["gamepad", "joystick", "input"]
categories = ["game-engines"]
edition = "2021"

[dependencies]
uuid = "1.0.0"
log = "0.4.1"
serde = { version = "1.0", features = ["derive"], optional = true }


[dev-dependencies]
env_logger = "0.9.0"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd"))'.dependencies]
libudev-sys = "0.1"
libc = "0.2"
nix = "0.23.1"
vec_map = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
io-kit-sys = { git = "https://github.com/legion-labs/io-kit-rs", rev = "351a702d9876b67c78ae42a7ea2a443046d7260c" }
vec_map = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.4", features = ["xinput"] }
rusty-xinput = "1.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Gamepad",
    "GamepadButton",
    "GamepadMappingType",
    "Window",
    "Navigator",
] }

[package.metadata.docs.rs]
features = ["serde"]

[features]
serde-serialize = ["serde"]
